@@ -28,4 +28,7 @@ PagesState::Clear()
 {
   current_index = 0;
   special_page.SetUndefined();
+
+  for (auto &p : pages)
+    p.Clear();
 }
